--- a/Primeira_Semana/meu_blog/index.html
+++ b/Primeira_Semana/meu_blog/index.html
@@ -4,8 +4,8 @@
         <title>Meu Blog</title>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
         <link rel="stylesheet" href="./style.css">
-        <script src="./teste.js"></script>
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+     </head>
     <body>
         <nav class="navbar">
             <div class="navbar-title">Stackhole</div>
@@ -28,10 +28,10 @@
             <div>Your Favorite Blog.</div>
         </header>
 
-        <main>
+        <main class="cards">
             <section class="card">
                 <div class="card-header">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRIHqyu43mlxCM7PALCohVGA7jLXyteF4f6uLDeSRPn5WGmORAu"
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSt-T3-nhLETBZlb9Ohcg-C9glMceVkuXgAD4eW-Aj7v9HyBzlK&usqp=CAU"
                         alt="lighthouse" 
                     />
                 </div>
@@ -48,16 +48,98 @@
                             provident aperiam corrupti obcaecati totam!
                         </p>
                     </div>
-                    <div class="cad-footer">
+                    <div class="card-footer">
                         <div>BY ADMIN</div>
                         <a href="#"><div>1 COMMENT</div></a>
                     </div>
                 </div>
             </section>
+
+            <section class="card">
+                <div class="card-header">
+                    <img src="https://cdn.mensagenscomamor.com/content/images/m000518052.jpg?v=1&w=600&h=941"
+                        alt="lighthouse" 
+                    />
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <div>
+                            <h1>Transitions in  UX DESIGN</h1>
+                            <h2>IN SESSION & PRINTS</h2>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Doloremque omnis, autem possimus nam libero dignissimos! Assumenda
+                            consequatur, nisi repellat sint eos impedit non mollitia! Deleniti
+                            provident aperiam corrupti obcaecati totam!
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <div>BY ADMIN</div>
+                        <a href="#"><div>1 COMMENT</div></a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="card">
+                <div class="card-header">
+                    <img src="https://i.pinimg.com/474x/d6/e5/04/d6e504df0d005355540cacf8b883d68c.jpg"
+                        alt="lighthouse" 
+                    />
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <div>
+                            <h1>Transitions in  UX DESIGN</h1>
+                            <h2>IN SESSION & PRINTS</h2>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Doloremque omnis, autem possimus nam libero dignissimos! Assumenda
+                            consequatur, nisi repellat sint eos impedit non mollitia! Deleniti
+                            provident aperiam corrupti obcaecati totam!
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <div>BY ADMIN</div>
+                        <a href="#"><div>1 COMMENT</div></a>
+                    </div>
+                </div>
+            </section>
+
+            <section class="card">
+                <div class="card-header">
+                    <img src="https://image.winudf.com/v2/image1/Y29tLnRodW5rYWJsZS5hbmRyb2lkLmNhaW9fY2FybG9zcm95YWxlMS5zcXFxX3NjcmVlbl8wXzE1NjcxNjU1ODhfMDUy/screen-0.jpg?fakeurl=1&type=.jpg"
+                        alt="lighthouse" 
+                    />
+                </div>
+                <div class="card-body">
+                    <div class="card-content">
+                        <div>
+                            <h1>Transitions in  UX DESIGN</h1>
+                            <h2>IN SESSION & PRINTS</h2>
+                        </div>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Doloremque omnis, autem possimus nam libero dignissimos! Assumenda
+                            consequatur, nisi repellat sint eos impedit non mollitia! Deleniti
+                            provident aperiam corrupti obcaecati totam!
+                        </p>
+                    </div>
+                    <div class="card-footer">
+                        <div>BY ADMIN</div>
+                        <a href="#"><div>1 COMMENT</div></a>
+                    </div>
+                </div>
+            </section>
+            
         </main>
 
         <footer>
-            Contato, 300
+            <div>
+                <p>TEL:(XX) X XXXX-XXXX</p>
+                <p>EMAIL: contact@mycontact.com</p>
+            </div>
         </footer>
     </body>
 </html>
